--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,18 @@
   "author": "Team Lipi",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^6.0.1",
+    "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
+    "csv-writer": "^1.6.0",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.0",
+    "firebase-admin": "^11.10.1",
+    "fs": "^0.0.1-security",
     "jimp": "^0.22.10",
+    "jsonfile": "^6.1.0",
     "multer": "^1.4.5-lts.1",
-    "potrace": "^2.1.8"
+    "potrace": "^2.1.8",
+    "svg2ttf": "^6.0.3",
+    "svgicons2svgfont": "^12.0.0"
   }
 }
